Simplifing the API.
